--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 }
 
 #effect {
-	height: 90zvh;
+	height: 100vh;
 	background: radial-gradient(circle, rgba(185,185,185,0.2),  rgba(40,40,40, 0.6));
 	text-align: center;
 	display: flex;
@@ -173,7 +173,8 @@ b {
 
 .intro {
   background: #fff;
-  padding: 100px 0;
+  height: 13vh;
+  margin-top: 70px;
 }
 
 .container {
@@ -201,8 +202,7 @@ h1 {
   position: relative;
   width: 6px;
   margin: 0 auto;
-  </ul>
-  </section>  background: #fff;
+  background: #fff;
 }
 
 .timeline ul li::after {
